[package]
name = "silent_ark"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Privacy-preserving scaling for Ark Protocol using BIP 352 Silent Payments"
license = "MIT"
repository = "https://github.com/yourusername/silent-ark"

[dependencies]
# Bitcoin primitives and cryptography
bitcoin = { version = "0.32", features = ["rand-std"] }

# Silent Payments implementation
# silentpayments = "0.4.1"  # Disabled for now - will implement manually

# Ark protocol dependencies (will need to fork or use as git dependencies)
# ark-core = { git = "https://github.com/ark-bitcoin/ark-core", branch = "main" }
# bark = { git = "https://github.com/ark-bitcoin/bark", branch = "main" }

# Blockchain scanning
bdk_esplora = "0.22.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[lib]
name = "silent_ark"
path = "src/lib.rs"

[[bin]]
name = "silent-ark-sender"
path = "src/bin/sender.rs"

[[bin]]
name = "silent-ark-scanner"
path = "src/bin/scanner.rs"
